--- a/Practice1.ipynb
+++ b/Practice1.ipynb
@@ -646,26 +646,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "# # # # # \n",
-      "# # # # \n",
-      "# # # \n",
-      "# # \n",
-      "# \n"
+      "0 0 0 0 \n",
+      "1 1 1 \n",
+      "2 2 \n",
+      "3 \n"
      ]
     }
    ],
    "source": [
-    "n = 5\n",
+    "n = 4\n",
     "for i in range(n):\n",
     "    for j in range(i,n):\n",
-    "        print(\"#\",end=\" \")\n",
+    "        print(i,end=\" \")\n",
     "    print()"
    ]
   },
@@ -750,6 +749,40 @@
     "    for j in range(i+1):\n",
     "        print('*',end = ' ')\n",
     "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "* * * *\n",
+      "*     *\n",
+      "*     *\n",
+      "*     *\n",
+      "* * * *\n"
+     ]
+    }
+   ],
+   "source": [
+    "r = 5\n",
+    "c = 4\n",
+    "for i in range(r):\n",
+    "    for j in range(c):\n",
+    "        if i == 0 or i ==r-1 or j==0 or j ==c-1:\n",
+    "            print(\"*\",end = '')\n",
+    "        else:\n",
+    "            print(\" \",end =\"\")\n",
+    "        if j!=c-1:\n",
+    "            print(\" \",end =\"\")\n",
+    "    print()\n",
+    "\n",
+    "    \n",
+    "    \n"
    ]
   },
   {
@@ -1214,7 +1247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -1222,8 +1255,8 @@
      "output_type": "stream",
      "text": [
       "The Love Calculator is calculating your score...\n",
-      "samsubash\n",
-      "Your score is 10, you are alright together.\n"
+      "romeojuliet\n",
+      "Your score is 55. you are not a good couple\n"
      ]
     }
    ],
@@ -1249,7 +1282,7 @@
     "elif 40 >= combine <=50:\n",
     "    print(f\"Your score is {combine}, you are alright together.\")\n",
     "else:\n",
-    "    print(f\"Your score is {combine}.\")\n",
+    "    print(f\"Your score is {combine}. you are not a good couple\")\n",
     "\n"
    ]
   },
@@ -1821,7 +1854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -1835,36 +1868,9 @@
    "source": [
     "a = \"subashsaka\"\n",
     "ans = \"\"\n",
-    "b = len(a)\n",
-    "for i in range(b-1,-1,-1):\n",
+    "for i in range(len(a)-1,-1,-1):\n",
     "    ans = ans+a[i]\n",
     "print(ans)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "unsupported operand type(s) for -: 'str' and 'int'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[6], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m a \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124msubashsaka\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m      2\u001b[0m b \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlen\u001b[39m(a)\n\u001b[1;32m----> 3\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(a\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m)):\n\u001b[0;32m      5\u001b[0m     l \u001b[38;5;241m=\u001b[39m a[i]\n\u001b[0;32m      6\u001b[0m     r \u001b[38;5;241m=\u001b[39m a[b\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m]\n",
-      "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for -: 'str' and 'int'"
-     ]
-    }
-   ],
-   "source": [
-    "a = \"subashsaka\"\n",
-    "b = len(a)\n",
-    "for i in range(len(a-1)):\n",
-    "    l = a[i]\n",
-    "    r = a[b-1-1]\n",
-    "print(l , r)\n"
    ]
   },
   {
@@ -1936,6 +1942,338 @@
     "print(\"--------YOUR ITEMS IN CART----------\")\n",
     "print(food)\n",
     "print(\"The total bill of your cart is\",sum(price))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "oraaa mass\n",
+      "subash\n",
+      "oraaa mass\n",
+      "subash\n",
+      "oraaa mass\n",
+      "subash\n"
+     ]
+    }
+   ],
+   "source": [
+    "def fot(n,s):\n",
+    "    for i in range(s):\n",
+    "        print(\"oraaa mass\")\n",
+    "        print(\"subash\")\n",
+    "fot(\"lol\",3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5 * 1 = 5\n",
+      "5 * 2 = 10\n",
+      "5 * 3 = 15\n",
+      "5 * 4 = 20\n",
+      "5 * 5 = 25\n",
+      "5 * 6 = 30\n",
+      "5 * 7 = 35\n",
+      "5 * 8 = 40\n",
+      "5 * 9 = 45\n",
+      "5 * 10 = 50\n"
+     ]
+    }
+   ],
+   "source": [
+    "def tabel(n):\n",
+    "    for i in range(1,11):\n",
+    "        print(f\"{n} * {i} = {n*i}\")\n",
+    "tabel(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a b\n",
+      "b c\n",
+      "c d\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = \"abcd\"\n",
+    "for i in range(len(a)-1):\n",
+    "    print(a[i],a[i+1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['flight', 'flow', 'flower']\n",
+      "fl\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = [\"flower\",\"flow\",\"flight\"]\n",
+    "print(sorted(s))\n",
+    "for i in s:\n",
+    "    b = i[:2]\n",
+    "print(b) \n",
+    "#print(s[:2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Sam', 'Dan', 'Hop']\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = [\"sam\",\"dan\",\"hop\"]\n",
+    "names  = [x.capitalize() for x in a]\n",
+    "print(names)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1[.]2[.]34[.]5\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = '1.2.34.5'\n",
+    "b= a.replace('.','[.]')\n",
+    "print(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "25\n"
+     ]
+    }
+   ],
+   "source": [
+    "#taking the weight as input\n",
+    "weight = int(input())\n",
+    "\n",
+    "#complete the function\n",
+    "def shipping_cost():\n",
+    "     print (weight * 5)\n",
+    "     \n",
+    "\n",
+    "#function call\n",
+    "shipping_cost()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "sentences = [\"Hope likes to eat chips\", \"i think so too\", \"this is great thanks very much\"]\n",
+    "maxnum = []\n",
+    "for i in sentences:\n",
+    "    space = i.count(\" \")+1\n",
+    "    maxnum.append(space)\n",
+    "print(max(maxnum))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*-*-*\n",
+      "*-*-*\n",
+      "*-*-*\n",
+      "*-*-*\n",
+      "*-*-*\n",
+      "*-*-*\n",
+      "*-*-*\n",
+      "*-*-*\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = 8\n",
+    "m = 3\n",
+    "for i in range(n):\n",
+    "    for j in range(m):\n",
+    "        print(\"*\",end = '')\n",
+    "        if j != m-1:\n",
+    "            print('-',end = '')\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "<class 'str'>\n",
+      "3\n",
+      "<class 'str'>\n",
+      "6\n",
+      "<class 'str'>\n",
+      "2\n",
+      "<class 'str'>\n",
+      "5\n",
+      "<class 'str'>\n",
+      "3\n",
+      "<class 'str'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr = [1, 2, 3]\n",
+    "n = len(arr)\n",
+    "for i in range(n):\n",
+    "    for j in range(i,n):\n",
+    "        a = (sum(arr[i:j+1]))\n",
+    "        b = str(a)\n",
+    "        print(b)\n",
+    "        print(type(b))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arr = [7,1,5,3,6,4]\n",
+    "n = len(arr)\n",
+    "for i in range(n):\n",
+    "    for j in range(n):\n",
+    "        print(arr[i],arr[j])    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "SUBARRAY"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1]\n",
+      "[1, 2]\n",
+      "[1, 2, 3]\n",
+      "[2]\n",
+      "[2, 3]\n",
+      "[3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr = [1, 2, 3]\n",
+    "n = len(arr)\n",
+    "for i in range(n):  # Start index\n",
+    "    for j in range(i, n):  # End index\n",
+    "        print(arr[i:j+1])  # Extract and print subarray\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr = [7,1,5,3,6,4]\n",
+    "for i in range(len(arr)):\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import turtle\n",
+    "t = turtle.Turtle()\n",
+    "t.forward(300)"
    ]
   }
  ],
