--- a/Practice2.ipynb
+++ b/Practice2.ipynb
@@ -226,24 +226,109 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "ename": "PermissionError",
-     "evalue": "[WinError 32] The process cannot access the file because it is being used by another process: 'lolly.txt'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mPermissionError\u001b[0m                           Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[32], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mos\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m os\u001b[38;5;241m.\u001b[39mremove(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mlolly.txt\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[1;31mPermissionError\u001b[0m: [WinError 32] The process cannot access the file because it is being used by another process: 'lolly.txt'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
      ]
     }
    ],
    "source": [
-    "import os\n",
-    "os.remove(\"lolly.txt\")"
+    "prices = [7,1,5,3,6,4]\n",
+    "buy = prices[0]\n",
+    "sell = prices\n",
+    "for i in prices:\n",
+    "    if i <= buy:\n",
+    "        buy = i\n",
+    "print(buy)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "prices = [7,1,5,3,6,4]\n",
+    "minprice = prices[0]\n",
+    "profit = 0\n",
+    "for i in prices[1:]:\n",
+    "    profit = max(profit,i-minprice)\n",
+    "    minprice = min(minprice,i)\n",
+    "print(profit)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n",
+      "3\n",
+      "6 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "        # code here\n",
+    "arr = [4, 3, 6, 2, 1, 1,7]\n",
+    "\n",
+    "n = len(arr)\n",
+    "print(n)\n",
+    "midd = (n//2)\n",
+    "print(midd)\n",
+    "print(arr[midd])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 3, 1, 7]\n",
+      "{1, 2, 3, 4, 5, 7, 8}\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = [1,2,3,4,1,3,1,5,7,8,7]\n",
+    "seen = set()\n",
+    "dup = []\n",
+    "for i in a:\n",
+    "    if i in seen:\n",
+    "        dup.append(i)\n",
+    "    else:\n",
+    "        seen.add(i)\n",
+    "\n",
+    "print(dup)\n",
+    "print(seen)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "LEFT ROTATE"
    ]
   },
   {
@@ -252,7 +337,76 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "h"
+    "class Solution:\n",
+    "    def leftRotate(self, arr, d):\n",
+    "        # code here\n",
+    "        arr[d:] = reversed(arr[d:])\n",
+    "        arr[:d] = reversed(arr[:d])\n",
+    "        arr.reverse()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr = [1, 2, 1, 2, 1, 3]\n",
+    "half = (len(arr)//2)\n",
+    "first = (sum(arr[:half]))\n",
+    "second= (sum(arr[half:]))\n",
+    "print(second - first)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr = [3,4,2,1,5,6]\n",
+    "n = len(arr)\n",
+    "for i in range(n):\n",
+    "    for j in range(0,n-i-1):\n",
+    "        if arr[j] > arr[j+1]:\n",
+    "            arr[j],arr[j+1] = arr[j+1],arr[j]\n",
+    "print(arr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "14\n"
+     ]
+    }
+   ],
+   "source": [
+    "c = [2,5]\n",
+    "a,b = min(c),max(c)\n",
+    "tot = sum(range(a,b+1))\n",
+    "print(tot)"
    ]
   }
  ],
