--- a/PythonPractice/FileHandling.ipynb
+++ b/PythonPractice/FileHandling.ipynb
@@ -9,15 +9,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "invalid literal for int() with base 10: 'lol'\n",
-      "cannot add number with a string \n",
+      "division not posiible with zero\n",
       "I will always print even there is an error\n"
      ]
     }
@@ -48,38 +47,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "hello subash how are you\n",
-      "you have exam tomorrow\n",
-      "cognizant and caterpiller\n",
-      "True\n"
+      "iam a gangstar\n"
      ]
     }
    ],
    "source": [
     "#reading file\n",
     "with open(\"subash.txt\") as hello:\n",
-    "    print(hello.read())\n",
-    "print(hello.closed)"
+    "    print(hello.read())\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "lost in spaceis best series everis best series ever\n",
-      "is best series ever\n"
+      "hi iam subash\n",
+      "\n"
      ]
     }
    ],
@@ -89,13 +84,13 @@
     "#\"w\" for write\n",
     "#\"a\" for append for exixting text\n",
     "\n",
-    "with open('hello.txt','r') as file:\n",
+    "with open('subash.txt','r') as file:\n",
     "    print(file.read())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,11 +98,69 @@
     "f.write('iam a gangstar')\n",
     "f.close()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"subash.txt\", \"a\") as f:\n",
+    "  f.write(\"Now the file has more content!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "iam a gangstarNow the file has more content!Now the file has more content!Now the file has more content!\n"
+     ]
+    }
+   ],
+   "source": [
+    "f = open(\"subash.txt\")\n",
+    "print(f.read())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a  = open(\"helloworld.txt\",\"x\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = open(\"helloworld.txt\",\"w\")\n",
+    "a.write(\"iam learning\")\n",
+    "a.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"hellworld.txt\",\"a\") as g:\n",
+    "    g.write(\"text added\")\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "project1",
    "language": "python",
    "name": "python3"
   },
