--- a/oops/oops.ipynb
+++ b/oops/oops.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +71,7 @@
     "    \n",
     "class child (parent):#CHILD CLASS INCLUDE PARENT NAME\n",
     "    def __init__(self,type,name,model):\n",
-    "        parent.__init__(self,type,name,model)#ACCESING PARENT CLASS USING #PARENT CLASS NAME\n",
+    "        parent. __init__(self,type,name,model)#ACCESING PARENT CLASS USING #PARENT CLASS NAME\n",
     "\n",
     "\n",
     "x = child(\"car\",\"ford\",\"mustang\")\n",
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -213,48 +213,11 @@
      "text": [
       "12345\n",
       "5000\n",
-      "amount withdrawl is 1000 and remaing balance is 4000\n",
-      "your balance after deposit is 6000\n"
+      "₹1000 deposited. New balance: ₹6000\n",
+      "₹2000 withdrawn. Remaining balance: ₹4000\n"
      ]
     }
    ],
-   "source": [
-    "class bankaccount:\n",
-    "    def __init__ (self,accnumber,balance):\n",
-    "        self.accnumber = accnumber\n",
-    "        self.__balance = balance #private attribute hiiden using underscores\n",
-    "\n",
-    "    def getbalance(self): #public method to access private data\n",
-    "        return self.__balance\n",
-    "    \n",
-    "    #public method to modifiy private details\n",
-    "    def deposit(self,amount):#depositing amount function\n",
-    "        if amount > 0:\n",
-    "            self.__balance = self.__balance + amount\n",
-    "            print(f\"your balance after deposit is {self.__balance}\")\n",
-    "        else:\n",
-    "            print(\"enter positive amount to deposit\")\n",
-    "\n",
-    "\n",
-    "    def withdraw(self,amount):#wthdrawing amount function\n",
-    "        if 0 < amount <= self.__balance:\n",
-    "            self.__balance = self.__balance-amount\n",
-    "            print(f\"amount withdrawl is {amount} and remaing balance is {self.__balance}\")\n",
-    "        else:\n",
-    "            print(\"insufficient funds\")\n",
-    "\n",
-    "account = bankaccount(\"12345\",5000)\n",
-    "print(account.accnumber)\n",
-    "print(account.getbalance())\n",
-    "account.withdraw(1000)\n",
-    "account.deposit(2000)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "class BankAccount:\n",
     "    def __init__(self, account_number, balance):\n",
