--- a/PythonPractice/Practice1.ipynb
+++ b/PythonPractice/Practice1.ipynb
@@ -1706,7 +1706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1722,7 +1722,6 @@
     "fact = 1\n",
     "for i in range(1,n+1):\n",
     "    fact*=i\n",
-    "\n",
     "print(fact)"
    ]
   },
@@ -1895,6 +1894,25 @@
     "    ans = ans+i\n",
     "\n",
     "print(ans) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hELLO wORLD\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = \"Hello World\"\n",
+    "b = a.swapcase()\n",
+    "print(b)"
    ]
   },
   {
@@ -2193,19 +2211,6 @@
     "        b = str(a)\n",
     "        print(b)\n",
     "        print(type(b))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "arr = [7,1,5,3,6,4]\n",
-    "n = len(arr)\n",
-    "for i in range(n):\n",
-    "    for j in range(n):\n",
-    "        print(arr[i],arr[j])    "
    ]
   },
   {
