--- a/PythonPractice/TCS_NQTPractice.ipynb
+++ b/PythonPractice/TCS_NQTPractice.ipynb
@@ -292,14 +292,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[4, 5, 6, 7, 1, 2, 3]\n"
+      "[6, 7, 1, 2, 3, 4, 5]\n"
      ]
     }
    ],
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -337,7 +337,7 @@
    "source": [
     "n = int(input())\n",
     "arr = list(map(int,input().split()))\n",
-    "es = n*(n+1)//2\n",
+    "es = (n+1)*(n+2)//2\n",
     "aes = sum(arr)\n",
     "ans = es-aes\n",
     "print(ans)\n"
@@ -595,6 +595,24 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a+((b-c)+d)\n"
+     ]
+    }
+   ],
+   "source": [
+    "h = \"a+((b-c)+d)\"\n",
+    "print(\"\".join(map(str,h)))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -656,6 +674,215 @@
     "    m =max(arr[i:i+k])\n",
     "    b.append(m)\n",
     "print(b)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "remove vowels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tkfrwrd\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = \"take u forward\"\n",
+    "vov = \"aeiou\"\n",
+    "a = \" \"\n",
+    "for ch in s:\n",
+    "    if ch not in vov:\n",
+    "        a=a+ch\n",
+    "c=a.replace(\" \",\"\")\n",
+    "print(c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "takeuforward\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = \"take u forward\"\n",
+    "res = s.replace(\" \",\"\")\n",
+    "print(res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "44\n"
+     ]
+    }
+   ],
+   "source": [
+    "a= 2\n",
+    "b = 9\n",
+    "c = sum(range(a,b+1))\n",
+    "print(c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a-b+c\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = \"(((a-b))+c)\"\n",
+    "b = \"()\"\n",
+    "c = \"\"\n",
+    "for i in a:\n",
+    "    if i not in b:\n",
+    "        c = c+i\n",
+    "print(c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = '123xyz'\n",
+    "b = ''\n",
+    "for i in a:\n",
+    "    if i "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['u', 'e']\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = \"success\"  \n",
+    "count = {}  \n",
+    "res = []\n",
+    "for i in s: \n",
+    "    if i in count: \n",
+    "        count[i] += 1  \n",
+    "    else:\n",
+    "        count[i] = 1 \n",
+    "for i in s: \n",
+    "    if count[i] == 1:\n",
+    "        res.append(i)\n",
+    "print(res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{2, 5}\n"
+     ]
+    }
+   ],
+   "source": [
+    "nums = [1, 2, 3, 4, 5, 2,5]\n",
+    "count = {}\n",
+    "dup = set()\n",
+    "for i in nums:\n",
+    "    if i in count:\n",
+    "        count[i] +=1\n",
+    "    else:\n",
+    "        count[i] = 1\n",
+    "for i in nums:\n",
+    "    if count[i] > 1:\n",
+    "        dup.add(i)\n",
+    "print(dup)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'o', 'f', 'r'}\n",
+      "{'g', 's', 'k', 'e'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "s1 = \"geeksforgeeks\"\n",
+    "s2 = \"geeksquiz\"\n",
+    "seen = set()\n",
+    "dup = set()\n",
+    "for i in s1:\n",
+    "    if i not in s2:\n",
+    "        dup.add(i)\n",
+    "    else:\n",
+    "        seen.add(i)\n",
+    "print(dup) \n",
+    "print(seen)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "a ,b = 12,18\n",
+    "c = math.gcd(a,b)\n",
+    "print(c)"
    ]
   }
  ],
