--- a/Pandas_practice/Pandas.ipynb
+++ b/Pandas_practice/Pandas.ipynb
@@ -127,7 +127,7 @@
     "    'Stock': [50, 60, 100, 80],\n",
     "    'Category': ['Bath', 'Bath', 'Toiletries', 'Kids']\n",
     "}\n",
-    "df = pd.DataFrame(pract)\n",
+    "df = pd.DataFrame(pract)# creating dataframe\n",
     "df.to_csv('product.csv',index=False)#save csv file\n",
     "print(df)\n",
     "print(\"CSV file saved successfully.\")"
@@ -444,14 +444,392 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d2d3d2eb",
+   "metadata": {},
+   "source": [
+    "Data before cleaning"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "0cf36868",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      Product   Price  Stock     Category\n",
+      "0        Soap    10.0   50.0         Bath\n",
+      "1     Shampoo    20.0   60.0         Bath\n",
+      "2       Brush    30.0  100.0   Toiletries\n",
+      "3  Toothpaste     NaN   80.0   Toiletries\n",
+      "4        Toys    40.0    NaN         Kids\n",
+      "5     Shampoo    20.0   60.0         Bath\n",
+      "6        Soap    10.0   50.0         Bath\n",
+      "7       Phone  5000.0   20.0  Electronics\n",
+      "8       Mouse   300.0    NaN  Electronics\n",
+      "9  Toothpaste     NaN   80.0   Toiletries\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "df = pd.read_csv('rawdata.csv')\n",
+    "print(df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "499cedb0",
+   "metadata": {},
+   "source": [
+    "df.dropna() will remove the entire row if any of the column has NULL values\n",
+    "But dropna() doesnt chnage the orginal data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "92b02bf9",
+   "metadata": {},
+   "source": [
+    "If you want to change the original DataFrame, use this = \"df.dropna(inplace = True)\n",
+    "\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "742c3b11",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Product   Price  Stock     Category\n",
+      "0     Soap    10.0   50.0         Bath\n",
+      "1  Shampoo    20.0   60.0         Bath\n",
+      "2    Brush    30.0  100.0   Toiletries\n",
+      "5  Shampoo    20.0   60.0         Bath\n",
+      "6     Soap    10.0   50.0         Bath\n",
+      "7    Phone  5000.0   20.0  Electronics\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "df = pd.read_csv('rawdata.csv')\n",
+    "new_df = df.dropna()\n",
+    "print(new_df.to_string())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bc5fb85a",
+   "metadata": {},
+   "source": [
+    "so insted of deleting the entire row because of some null values try to fill the null values with the data using fillna"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "921ddbb3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      Product   Price  Stock     Category\n",
+      "0        Soap    10.0   50.0         Bath\n",
+      "1     Shampoo    20.0   60.0         Bath\n",
+      "2       Brush    30.0  100.0   Toiletries\n",
+      "3  Toothpaste    20.0   80.0   Toiletries\n",
+      "4        Toys    40.0   40.0         Kids\n",
+      "5     Shampoo    20.0   60.0         Bath\n",
+      "6        Soap    10.0   50.0         Bath\n",
+      "7       Phone  5000.0   20.0  Electronics\n",
+      "8       Mouse   300.0   40.0  Electronics\n",
+      "9  Toothpaste    20.0   80.0   Toiletries\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.read_csv('rawdata.csv')\n",
+    "df.fillna({\"Price\": 20,\"Stock\": 40}, inplace=True)\n",
+    "print(df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "662ec5d0",
+   "metadata": {},
+   "source": [
+    "CHECK DUPLICATE VALUES"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "7cda923d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      Product  Price  Stock    Category\n",
+      "5     Shampoo   20.0   60.0        Bath\n",
+      "6        Soap   10.0   50.0        Bath\n",
+      "9  Toothpaste    NaN   80.0  Toiletries\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "df = pd.read_csv('rawdata.csv')\n",
+    "print(df[df.duplicated()])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e171a462",
+   "metadata": {},
+   "source": [
+    "NOW REMOVE DUPLICATE VALUES"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "07627e2b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      Product   Price  Stock     Category\n",
+      "0        Soap    10.0   50.0         Bath\n",
+      "1     Shampoo    20.0   60.0         Bath\n",
+      "2       Brush    30.0  100.0   Toiletries\n",
+      "3  Toothpaste    20.0   80.0   Toiletries\n",
+      "4        Toys    40.0   40.0         Kids\n",
+      "7       Phone  5000.0   20.0  Electronics\n",
+      "8       Mouse   300.0   40.0  Electronics\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "df = pd.read_csv('rawdata.csv')\n",
+    "df.fillna({\"Price\": 20,\"Stock\": 40}, inplace=True)\n",
+    "df.drop_duplicates(inplace=True)\n",
+    "print(df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1d8dfc6a",
+   "metadata": {},
+   "source": [
+    "checking after cleaning duplicates"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "cffac729",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      Product   Price  Stock     Category\n",
+      "0        Soap    10.0   50.0         Bath\n",
+      "1     Shampoo    20.0   60.0         Bath\n",
+      "2       Brush    30.0  100.0   Toiletries\n",
+      "3  Toothpaste     NaN   80.0   Toiletries\n",
+      "4        Toys    40.0    NaN         Kids\n",
+      "5     Shampoo    20.0   60.0         Bath\n",
+      "6        Soap    10.0   50.0         Bath\n",
+      "7       Phone  5000.0   20.0  Electronics\n",
+      "8       Mouse   300.0    NaN  Electronics\n",
+      "9  Toothpaste     NaN   80.0   Toiletries\n",
+      "The remaining duplicates are :  3\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df)\n",
+    "print(\"The remaining duplicates are : \",df.duplicated().sum())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8705d070",
+   "metadata": {},
+   "source": [
+    "DATA conversion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "902647fb",
+   "metadata": {},
+   "source": [
+    "| Task                     | Code               |\n",
+    "| ------------------------ | ------------------ |\n",
+    "| Convert string to number | `pd.to_numeric()`  |\n",
+    "| Convert string to date   | `pd.to_datetime()` |\n",
+    "| Check data types         | `df.dtypes`        |\n",
+    "| Drop invalid formats     | `df.dropna()`      |\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8bc6597f",
+   "metadata": {},
+   "source": [
+    "EXAMPLE FOR CHANGING FORMAT\n",
+    "\n",
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.read_csv('data.csv')\n",
+    "\n",
+    "df['Date'] = pd.to_datetime(df['Date'], format='mixed')\n",
+    "\n",
+    "print(df.to_string())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8d76d5f2",
+   "metadata": {},
+   "source": [
+    "Replacing Values from the data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "5d18d187",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      Product   Price  Stock     Category\n",
+      "0        Soap    10.0   50.0         Bath\n",
+      "1     Shampoo    20.0   60.0         Bath\n",
+      "2       Brush    30.0   45.0   Toiletries\n",
+      "3  Toothpaste    20.0   80.0   Toiletries\n",
+      "4        Toys    40.0   40.0         Kids\n",
+      "7       Phone  5000.0   20.0  Electronics\n",
+      "8       Mouse   300.0   40.0  Electronics\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "df = pd.read_csv('rawdata.csv')\n",
+    "df.fillna({\"Price\": 20,\"Stock\": 40}, inplace=True)\n",
+    "df.drop_duplicates(inplace=True)\n",
+    "df.loc[2, 'Stock'] = 45 # replace using loc method\n",
+    "print(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "878c1d3c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "pd = pd.read_csv('rawdata.csv')\n",
-    "print(pd)"
+    "df.to_csv(\"cleaned_data.csv\", index=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "b0a35b65",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      Product   Price  Stock     Category\n",
+      "0        Soap    10.0   50.0         Bath\n",
+      "1     Shampoo    20.0   60.0         Bath\n",
+      "2       Brush    30.0   45.0   Toiletries\n",
+      "3  Toothpaste    20.0   80.0   Toiletries\n",
+      "4        Toys    40.0   40.0         Kids\n",
+      "7       Phone  5000.0   20.0  Electronics\n",
+      "8       Mouse   300.0   40.0  Electronics\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fd112e47",
+   "metadata": {},
+   "source": [
+    "REMOVING ROWS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "c3d00339",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      Product  Price  Stock     Category\n",
+      "0        Soap   10.0   50.0         Bath\n",
+      "1     Shampoo   20.0   60.0         Bath\n",
+      "2       Brush   30.0   45.0   Toiletries\n",
+      "3  Toothpaste   20.0   80.0   Toiletries\n",
+      "4        Toys   40.0   40.0         Kids\n",
+      "6       Mouse  300.0   40.0  Electronics\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.read_csv('cleaned_data.csv')\n",
+    "for x in df.index:\n",
+    "    if df.loc[x,\"Price\"]>2000:\n",
+    "        df.drop(x,inplace=True)\n",
+    "print(df.to_string())\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b1cc0ccf",
+   "metadata": {},
+   "source": [
+    "Pandas - Data Correlations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1ad71526",
+   "metadata": {},
+   "source": [
+    "The corr() method calculates the relationship between each column in your data set."
    ]
   }
  ],
