--- a/PythonPractice/Practice1.ipynb
+++ b/PythonPractice/Practice1.ipynb
@@ -105,6 +105,25 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4, 3, 2, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = [1,2,3,4]\n",
+    "b = a[::-1]\n",
+    "print(b)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -250,6 +269,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 1, 2, 3, 5, 8, 13, 21, 34]\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = 10\n",
+    "a,b = 0,1\n",
+    "res = []\n",
+    "for _ in range(n):\n",
+    "    res.append(a)\n",
+    "    a,b = b,a+b\n",
+    "print(res)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [
@@ -344,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
