--- a/PythonPractice/Practice2.ipynb
+++ b/PythonPractice/Practice2.ipynb
@@ -935,33 +935,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "7 is a prime number.\n"
+      "elppa\n"
      ]
     }
    ],
    "source": [
-    "n = int(input(\"Enter a number: \"))\n",
-    "\n",
-    "if n <= 1:  # Numbers less than or equal to 1 are not prime\n",
-    "    print(f\"{n} is not a prime number.\")\n",
-    "else:\n",
-    "    is_prime = True\n",
-    "    for i in range(2, int(n**0.5) + 1):  # Check from 2 to sqrt(n)\n",
-    "        if n % i == 0:  # If n is divisible by i, it's not prime\n",
-    "            is_prime = False\n",
-    "            break\n",
-    "    \n",
-    "    if is_prime:\n",
-    "        print(f\"{n} is a prime number.\")\n",
-    "    else:\n",
-    "        print(f\"{n} is not a prime number.\")\n"
+    "a = 'apple'\n",
+    "b = ''\n",
+    "for i in a:\n",
+    "    b = i+b\n",
+    "print(b)"
    ]
   },
   {
@@ -1016,13 +1006,6 @@
     "    print(key,value)\n",
     " "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
