--- a/PythonPractice/TCS_NQTPractice.ipynb
+++ b/PythonPractice/TCS_NQTPractice.ipynb
@@ -214,14 +214,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "nonleap\n"
+      "leap\n"
      ]
     }
    ],
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -292,14 +292,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[6, 7, 1, 2, 3, 4, 5]\n"
+      "[5, 6, 7, 1, 2, 3, 4]\n"
      ]
     }
    ],
@@ -308,7 +308,6 @@
     "k =int(input())\n",
     "n = len(nums)\n",
     "k = k % n  # Handle if k is greater than the length of nums\n",
-    "\n",
     "# Slice the array to rotate it\n",
     "nums[:] = nums[-k:] + nums[:-k]\n",
     "print(nums)"
@@ -486,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -498,28 +497,16 @@
     }
    ],
    "source": [
-    "import math\n",
-    "\n",
-    "n = int(input())  # Read the input number\n",
-    "\n",
-    "# Handle the case where n <= 1\n",
-    "if n <= 1:\n",
-    "    print(\"prime\")  # 0 means not prime\n",
+    "n= int(input())\n",
+    "if n<=1:\n",
+    "    print('not prime')\n",
     "else:\n",
-    "    # Assume n is prime unless we find a divisor\n",
-    "    is_prime = True\n",
-    "    \n",
-    "    # Check for divisors from 2 to sqrt(n)\n",
-    "    for i in range(2, int(math.sqrt(n)) + 1):\n",
-    "        if n % i == 0:\n",
-    "            print(\"notprime\")  # n is not prime\n",
-    "            is_prime = False\n",
-    "            break  # No need to continue checking if a divisor is found\n",
-    "    \n",
-    "    # If no divisors were found, n is prime\n",
-    "    if is_prime:\n",
-    "        print(\"prime\")\n",
-    "\n"
+    "    for i in range(2,int(n**0.5)+1):\n",
+    "        if n%i == 0:\n",
+    "            print('Not prime')\n",
+    "            break\n",
+    "        else:\n",
+    "            print('prime')"
    ]
   },
   {
@@ -552,17 +539,6 @@
     "for i in range(2,n+1):\n",
     "    dp[i]=dp[i-1]+dp[i-2]\n",
     "print(dp[n])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "n = int(input())\n",
-    "if n == 1 or n == 0:\n",
-    "    print(\"1\")\n"
    ]
   },
   {
@@ -621,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -641,8 +617,7 @@
     "    b,a = a,b%a\n",
     "c = b\n",
     "d = (s*v)//c\n",
-    "print(d)\n",
-    "\n"
+    "print(d)"
    ]
   },
   {
@@ -685,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
