--- a/oops/oops_Practice.ipynb
+++ b/oops/oops_Practice.ipynb
@@ -160,6 +160,146 @@
     "user.withdraw()\n",
     "user.check_balance()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a28b13e3",
+   "metadata": {},
+   "source": [
+    "ENCAPSULATION"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "b35f48b9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "21\n"
+     ]
+    }
+   ],
+   "source": [
+    "class person:\n",
+    "    def __init__(self):\n",
+    "        self.__age = 0\n",
+    "    def set_age(self,a):\n",
+    "        self.__age = a\n",
+    "    def get_age(self):\n",
+    "        return self.__age\n",
+    "p = person()\n",
+    "p.set_age(21)\n",
+    "print(p.get_age())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d02c30d8",
+   "metadata": {},
+   "source": [
+    "POLYMORPHISM"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "d84a7165",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "chirp\n",
+      "meow\n"
+     ]
+    }
+   ],
+   "source": [
+    "class bird:\n",
+    "    def speak(self):\n",
+    "        print('chirp')\n",
+    "\n",
+    "class cat:\n",
+    "    def speak(self):\n",
+    "        print('meow')\n",
+    "for animal in bird(),cat():\n",
+    "    animal.speak()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cddc9869",
+   "metadata": {},
+   "source": [
+    "INHERITANCE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "f9268e71",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "animal speak\n"
+     ]
+    }
+   ],
+   "source": [
+    "class animal:\n",
+    "    def speak(self):\n",
+    "        print('animal speak')\n",
+    "\n",
+    "class dog(animal):\n",
+    "    pass\n",
+    "d = dog()\n",
+    "d.speak()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ea3cb273",
+   "metadata": {},
+   "source": [
+    "ABSTRACTION"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "a668415f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "16\n"
+     ]
+    }
+   ],
+   "source": [
+    "from abc import ABC,abstractmethod\n",
+    "class shape(ABC):\n",
+    "    @abstractmethod\n",
+    "    def area(self):\n",
+    "        pass\n",
+    "\n",
+    "class square(shape):\n",
+    "    def area(self):\n",
+    "        return 4*4\n",
+    "    \n",
+    "g = square()\n",
+    "print(g.area())"
+   ]
   }
  ],
  "metadata": {
