--- a/DSA/blind75.ipynb
+++ b/DSA/blind75.ipynb
@@ -41,9 +41,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['act', 'cat'], ['pots', 'tops', 'stop'], ['hat']]\n"
+     ]
+    }
+   ],
    "source": [
     "n = [\"act\", \"pots\", \"tops\", \"cat\", \"stop\", \"hat\"]\n",
     "b = []\n",
