--- a/Numpy/Numpy.ipynb
+++ b/Numpy/Numpy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +42,7 @@
        "3"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -718,6 +718,87 @@
     "import numpy as np\n",
     "array = np.array([12,13,15,30,14,32])\n",
     "np.mean(array)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "concatenate 2 NumPy arrays"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 5 6]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "a = np.array([1,2])\n",
+    "b = np.array([5,6])\n",
+    "c = np.concatenate((a,b))\n",
+    "print(c)\n",
+    "b.ndim"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "NUMPY MULTIPLICATION"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A:  [[15 16 17]\n",
+      " [18 19 20]\n",
+      " [21 22 23]]\n",
+      "B:  [[20 21 22]\n",
+      " [23 24 25]\n",
+      " [26 27 28]]\n",
+      "Result:  [[300 336 374]\n",
+      " [414 456 500]\n",
+      " [546 594 644]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "# NumPy matrices\n",
+    "A = np.arange(15,24).reshape(3,3)\n",
+    "B = np.arange(20,29).reshape(3,3)\n",
+    "print(\"A: \",A)\n",
+    "print(\"B: \",B)\n",
+    "\n",
+    "# Multiply A and B\n",
+    "result = A*B\n",
+    "print(\"Result: \", result)"
    ]
   }
  ],
